Adel: pivottable Done!

--- a/app/enseignant/pages/evaluations/evaluations.html
+++ b/app/enseignant/pages/evaluations/evaluations.html
@@ -1,10 +1,12 @@
 <style>
     .panel_principal {
         overflow:scroll;
+        min-height: 70%;
         max-height: 70%;
     }
     .panel_secondaire {
         overflow:scroll;
+        min-height: 20%;
         max-height: 20%;
     }
     #listeval {
@@ -72,11 +74,11 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu pull-right" role="menu">
-                            <li><a href="#">A375</a>
+                            <li><a href="">A375</a>
                             </li>
-                            <li><a href="#">B229</a>
+                            <li><a href="">B229</a>
                             </li>
-                            <li><a href="#">A120</a>
+                            <li><a href="">A120</a>
                             </li>
                         </ul>
                     </div>
@@ -169,11 +171,13 @@
                     </div>
                     <div class="panel-body panel_secondaire">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                        <p>Anim quis qui in cillum fugiat aute exercitation. Eiusmod do dolor officia ullamco pariatur cupidatat qui incididunt exercitation laboris nisi cupidatat eiusmod nulla. Sunt adipisicing
+                            enim consectetur sit ipsum adipisicing mollit. Eu aliquip enim reprehenderit nulla in consectetur ipsum eu sunt nisi reprehenderit incididunt. Ea laboris aute ullamco eiusmod voluptate
+                            occaecat. Cupidatat nulla anim eu nostrud exercitation laboris nisi velit. Sunt ea irure sunt do velit consectetur pariatur dolor cupidatat. Anim pariatur veniam esse anim sint
+                            consectetur et. Nulla ad qui consequat et pariatur cillum mollit nostrud culpa. Ut labore proident cupidatat anim eu. ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+                            tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
-                    </div>
+                        </div>
                     <div class="panel-footer">
                         150 évaluations
                     </div>
@@ -186,7 +190,13 @@
                         Évaluation A402
                     </div>
                     <div class="panel-body panel_secondaire">
+                        <p>Anim quis qui in cillum fugiat aute exercitation. Eiusmod do dolor officia ullamco pariatur cupidatat qui incididunt exercitation laboris nisi cupidatat eiusmod nulla. Sunt adipisicing
+                            enim consectetur sit ipsum adipisicing mollit. Eu aliquip enim reprehenderit nulla in consectetur ipsum eu sunt nisi reprehenderit incididunt. Ea laboris aute ullamco eiusmod voluptate
+                            occaecat. Cupidatat nulla anim eu nostrud exercitation laboris nisi velit. Sunt ea irure sunt do velit consectetur pariatur dolor cupidatat. Anim pariatur veniam esse anim sint consectetur
+                            et. Nulla ad qui consequat et pariatur cillum mollit nostrud culpa. Ut labore proident cupidatat anim eu. consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan.
+                            Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                        <p>Anim quis qui in cillum fugiat aute exercitation. Eiusmod do dolor officia ullamco pariatur cupidatat qui incididunt exercitation laboris nisi cupidatat eiusmod nulla. Sunt adipisicing enim consectetur sit ipsum adipisicing mollit. Eu aliquip enim reprehenderit nulla in consectetur ipsum eu sunt nisi reprehenderit incididunt. Ea laboris aute ullamco eiusmod voluptate occaecat. Cupidatat nulla anim eu nostrud exercitation laboris nisi velit. Sunt ea irure sunt do velit consectetur pariatur dolor cupidatat. Anim pariatur veniam esse anim sint consectetur et. Nulla ad qui consequat et pariatur cillum mollit nostrud culpa. Ut labore proident cupidatat anim eu.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
