--- a/app/enseignant/pages/main/main.html
+++ b/app/enseignant/pages/main/main.html
@@ -22,26 +22,26 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div>
-                            <a href="#">Ajouter un cours</a><br>
-                            <a ui-sref="admin.cours">Voir la liste des cours</a><br>
-                            <a href="#">Statistiques</a><br>
+                            <a ui-sref="enseignant.mesCours">Voir mes cours</a><br>
+                            <a ui-sref="enseignant.cours">Voir la liste des cours</a><br>
                         </div>
                     </div>
                     <!-- /.panel-body -->
                 </div>
                 <!-- /.panel -->
             </div>
+
             <!-- /.col-lg-6 -->
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Gestion des étudiants
+                        Gestion des évaluations
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div>
-                            <a ui-sref="admin.students.add">Ajouter un étudiant</a><br>
-                            <a ui-sref="admin.students">Voir la liste des étudiants</a><br>
+                            <a ui-sref="enseignant.mesEvaluations">Voir mes évaluations</a><br>
+                            <a ui-sref="enseignant.createEvaluation">Ajouter une évaluation</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
                     </div>
@@ -49,43 +49,6 @@
                 </div>
                 <!-- /.panel -->
             </div>
-            <!-- /.col-lg-6 -->
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Gestion des enseignants
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div>
-                            <a href="#">Ajouter un enseignant</a><br>
-                            <a ui-sref="admin.enseignants">Voir la liste des enseignants</a><br>
-                            <a href="#">Statistiques</a><br>
-                        </div>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
-            </div>
-            <!-- /.col-lg-6 -->
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Gestion des groupes
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div>
-                            <a href="#">Ajouter un groupe</a><br>
-                            <a ui-sref="admin.groupes">Voir la liste des groupes</a><br>
-                            <a href="#">Statistiques</a><br>
-                        </div>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
-            </div>
-            <!-- /.col-lg-6 -->
 
 
             <!-- /modified -->
