--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
 
+    <script src="app/enseignant/pages/cours/cours_controller.js"></script>
+    <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
+    <script src="app/enseignant/pages/enseignant_controller.js"></script>
+
 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
