--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -221,9 +221,17 @@
                 </li>
                 <!-- /.dropdown -->
             </ul>
-            <!-- /.navbar-top-links -->
 
-            <div class="navbar-default sidebar" role="navigation">
+            <!-- /.navbar-top-links -->
+            <script>
+                $(document).ready(function(){
+                    $("#flip").click(function(){
+                        $("#panel").slideDown(5000);
+                    });
+                });
+            </script>
+
+            <div id="panel" class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
@@ -237,6 +245,7 @@
                             </div>
                             <!-- /input-group -->
                         </li>
+
                         <li>
                             <a ui-sref="admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
@@ -261,6 +270,8 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
+
+        <div id="flip"> </div>
 
 
 
