--- a/app/Admin/pages/cours/cours_add_Eleve.html
+++ b/app/Admin/pages/cours/cours_add_Eleve.html
@@ -10,7 +10,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Ajouter un enseignant au cours
+                    Ajouter un élève au cours
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
