ajout fichiers interface eleve

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <script src="app/bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="app/Admin/dist/js/sb-admin-2.js"></script>
     <script src="app/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="app/bower_components/pdfjs-dist/build/pdf.js"></script>
+    <script src="app/bower_components/angular-pdf/dist/angular-pdf.js"></script>
+
+
     <!--
     <script src="app/Admin/dist/datatables/js/jquery.dataTables.min.js"></script>
     <script src="app/Admin/dist/datatables-plugins/dataTables.bootstrap.min.js"></script>
@@ -40,6 +44,7 @@
     <script src="app/app_state.js"></script>
     <script src="app/Admin/pages/admin_state.js"></script>
     <script src="app/enseignant/pages/enseignant_state.js"></script>
+    <script src="app/eleve/pages/eleve_state.js"></script>
     <script src="app/navbar/navbar.directive.js"></script>
     <script src="app/services/eleves_service.js"></script>
     <script src="app/services/enseignants_service.js"></script>
@@ -54,6 +59,8 @@
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
+    <script src="app/eleve/pages/correction/correction_controller.js"></script>
+    <script src="app/eleve/pages/correction/pdf_controller.js"></script>
 
     <script src="app/enseignant/pages/cours/cours_controller.js"></script>
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
