--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -231,7 +231,7 @@
                 });
             </script>
 
-            <div id="panel" class="navbar-default sidebar" role="navigation">
+            <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
@@ -270,8 +270,6 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
-
-        <div id="flip"> </div>
 
 
 
