--- a/app/Admin/pages/cours/cours_add.html
+++ b/app/Admin/pages/cours/cours_add.html
@@ -1,4 +1,4 @@
-<div id="page-wrapper" ng-controller="CoursController">
+<div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Nouveau Cours</h1>
@@ -34,10 +34,6 @@
                     <textarea ng-model="newCours.description" class="form-control" id="description" placeholder="description"/>
                 </div>
             </div>
-
-            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
-
-            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
 
 
 
