--- a/app/eleve/pages/eleve.html
+++ b/app/eleve/pages/eleve.html
@@ -1,7 +1,6 @@
 <div id="wrapper">
-
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0" ng-controller="EnseignantController">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -9,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="admin.html">SB Admin v2.0</a>
+            <a class="navbar-brand" href="#">Moodok</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -221,50 +220,44 @@
             </li>
             <!-- /.dropdown -->
         </ul>
-        <!-- /.navbar-top-links -->
 
+
+
+        <!-- /.navbar-top-links -->
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse">
+
                 <ul class="nav" id="side-menu">
                     <li class="sidebar-search">
-                        <div class="input-group custom-search-form">
-                            <input type="text" class="form-control" placeholder="Search...">
-                            <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                        </div>
+                        <img src="{{eleveCo.avatar}}" class="img-rounded" alt="Robert" width="200" height="190">
+                        <h3>{{eleveCo.nom}} {{eleveCo.prenom}} </h3>
+                        <h5>{{eleveCo.email}}</h5>
                         <!-- /input-group -->
                     </li>
                     <li>
-                        <a ui-sref="admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                        <a class="navbarEnseignantText" ui-sref="eleve"><i class="fa fa-dashboard fa-2x"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a ui-sref="eleve.correction"><i class="fa fa-table fa-fw"></i> Correction</a>
+                        <a class="navbarEnseignantText" ui-sref="eleve.cours"><i class="fa fa-book fa-fw"></i> Mes Cours</a>
                     </li>
                     <li>
-                        <a ui-sref="admin.students"><i class="fa fa-table fa-fw"></i> Élèves</a>
+                        <a class="navbarEnseignantText" ui-sref="eleve.evaluations"><i class="fa fa-pencil fa-fw"></i> Mes Évaluations</a>
                     </li>
                     <li>
-                        <a ui-sref="admin.enseignants"><i class="fa fa-table fa-fw"></i> Enseignants</a>
+                        <a class="navbarEnseignantText" href="#"><i class="fa fa-cog fa-fw"></i> Paramètres</a>
                     </li>
-                    <li>
-                        <a ui-sref="admin.groupes"><i class="fa fa-table fa-fw"></i> Groupes</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-table fa-fw"></i> Paramètres</a>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- /.sidebar-collapse -->
         </div>
-        <!-- /.navbar-static-side -->
-    </nav>
+        <!-- /.sidebar-collapse -->
+</div>
+<!-- /.navbar-static-side -->
+</nav>
 
 
 
-    <div ui-view="content"></div>
+<div ui-view="content"></div>
 
 
 
