--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -1,5 +1,6 @@
     <div id="wrapper">
-
+        <!-- Pagination -->
+        <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -275,8 +276,12 @@
 
         <div ui-view="content"></div>
 
-
-
     </div>
     <!-- /#wrapper -->
 
+    <!-- <pagination
+         ng-model="currentPage"
+         total-items="todos.length"
+         max-size="maxSize"
+         boundary-links="true">
+     </pagination>-->
