--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html ng-app='NotePairApp'>
 <head>
     <title> Moodok </title>
-
-
-
     <link rel="stylesheet" type="text/css" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css"/>
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
@@ -85,6 +82,7 @@
         google.load("visualization", "1", {packages:["corechart", "charteditor"]});
 
     </script>
+    <script src="app/Admin/pages/admin_controller.js"></script>
 
 
 </head>
