--- a/app/enseignant/pages/enseignant.html
+++ b/app/enseignant/pages/enseignant.html
@@ -241,7 +241,7 @@
                         <a class="navbarEnseignantText" ui-sref="enseignant.cours"><i class="fa fa-book fa-fw"></i> Cours</a>
                     </li>
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant.mesEvaluations"><i class="fa fa-pencil fa-fw"></i> Évaluations</a>
+                        <a class="navbarEnseignantText" ui-sref="enseignant.evaluations"><i class="fa fa-pencil fa-fw"></i> Évaluations</a>
                     </li>
                     <li>
                         <a class="navbarEnseignantText" ui-sref="enseignant.createEvaluation"><i class="fa fa-check-square fa-fw"></i> Créer une évaluation</a>
