--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="app/bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="app/bower_components/angular-pdf/dist/angular-pdf.js"></script>
 
+    <script src="https://code.highcharts.com/highcharts.js"></script>
 
     <!--
     <script src="app/Admin/dist/datatables/js/jquery.dataTables.min.js"></script>
