Adel: pivottable Done!

--- a/app/enseignant/pages/evaluations/evaluations.html
+++ b/app/enseignant/pages/evaluations/evaluations.html
@@ -98,17 +98,19 @@
                                 var renderers = $.extend($.pivotUtilities.renderers,
                                         $.pivotUtilities.gchart_renderers);
 
-                                $.getJSON("dist/mps.json", function(mps) {
+                                $.getJSON("dist/mps2.json", function(mps) {
                                     $("#output").pivotUI(mps, {
                                         renderers: renderers,
                                         derivedAttributes: {
-                                            "Intervalle Note": derivers.bin("Note", 2.5)
+                                            "Intervalle Note": derivers.bin("Note", 2.5),
+                                            "Écart": function(mp) {
+                                                return Math.abs(mp["Note"]-10)/10;                                            }
                                         },
                                         cols: ["Question"], rows: ["Copie"],
-                                        rendererName: "Carte de Chaleur",
+                                        rendererName: "Carte de Chaleur par ligne",
                                         aggregatorName: "Moyenne",
                                         vals: [
-                                            "Note"
+                                            "Écart"
                                         ]
                                     });
                                 });
@@ -145,10 +147,13 @@
                                     $("#output1").pivotUI(mps, {
                                         renderers: renderers,
                                         derivedAttributes: {
-                                            "Intervalle Note": derivers.bin("Note", 2.5)
+                                            "Intervalle Note": derivers.bin("Note", 2.5),
+                                            "Écart": function(mp) {
+                                                return Math.abs(mp["Note"]-10)/10;
+                                            }
                                         },
                                         cols: ["Question"], rows: ["Copie"],
-                                        rendererName: "Carte de Chaleur",
+                                        rendererName: "Carte de Chaleur par ligne",
                                         aggregatorName: "Moyenne",
                                         vals: [
                                             "Note"
