--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
+    <script src="app/HighCharts/HighCharts_Controller.js"></script>
 
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/enseignant/pages/enseignant_controller.js"></script>
