--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -230,7 +230,7 @@
                     <ul class="nav" id="side-menu">
 
                         <li>
-                            <a ui-sref="admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a ui-sref="admin"><i class="glyphicon glyphicon-home"></i> Dashboard</a>
                         </li>
                         <li>
                             <a ui-sref="admin.cours"><i class="fa fa-table fa-fw"></i> Cours</a>
