--- a/app/eleve/pages/eleve.html
+++ b/app/eleve/pages/eleve.html
@@ -235,7 +235,7 @@
                         <!-- /input-group -->
                     </li>
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="eleve"><i class="fa fa-dashboard fa-2x"></i> Dashboard</a>
+                        <a class="navbarEnseignantText" ui-sref="eleve"><i class="glyphicon glyphicon-home"></i> Dashboard</a>
                     </li>
                     <li>
                         <a class="navbarEnseignantText" ui-sref="eleve.cours"><i class="fa fa-book fa-fw"></i> Mes Cours</a>
