--- a/app/eleve/pages/main/main.html
+++ b/app/eleve/pages/main/main.html
@@ -4,6 +4,50 @@
             <div class="col-lg-12">
                 <h1 class="page-header">Dashboard</h1>
             </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <!-- /.row -->
+        <div class="row">
+
+
+            <!-- modified -->
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Cours
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div>
+                            <a ui-sref="eleve.mesCours">Voir mes cours</a><br>
+                            <a ui-sref="eleve.cours">Voir la liste des cours</a><br>
+                        </div>
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+            </div>
+
+            <!-- /.col-lg-6 -->
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Évaluations
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div>
+                            <a ui-sref="eleve.mesEvaluations">Voir mes évaluations</a><br>
+                            <a ui-sref="eleve.Evaluations">Voir mes notes</a><br>
+                        </div>
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+            </div>
+
+
+            <!-- /modified -->
 
 
 
@@ -11,5 +55,9 @@
 
 
         </div>
-    </div>
+        <!-- /.row -->
 
+    </div>
+    <!-- /#page-wrapper -->
+
+</div>
