--- a/app/enseignant/pages/enseignant.html
+++ b/app/enseignant/pages/enseignant.html
@@ -249,7 +249,7 @@
                         <h5>{{enseignantCo.email}}</h5>
                         <!-- /input-group -->
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant"><i class="fa fa-dashboard fa-2x"></i> Dashboard</a>
+                        <a class="navbarEnseignantText" ui-sref="enseignant"><i class="glyphicon glyphicon-home"></i> Dashboard</a>
                     </li>
                     <li>
                         <a class="navbarEnseignantText" ui-sref="enseignant.cours"><i class="fa fa-book fa-fw"></i> Cours</a>
