Adel: eleve/evaluations

--- a/app/eleve/pages/eleve.html
+++ b/app/eleve/pages/eleve.html
@@ -244,6 +244,9 @@
                         <a class="navbarEnseignantText" ui-sref="eleve.evaluations"><i class="fa fa-pencil fa-fw"></i> Mes Évaluations</a>
                     </li>
                     <li>
+                        <a class="navbarEnseignantText" ui-sref="eleve.resultats"><i class="fa fa-pencil fa-fw"></i> Mes Résultats</a>
+                    </li>
+                    <li>
                         <a class="navbarEnseignantText" href="#"><i class="fa fa-cog fa-fw"></i> Paramètres</a>
                     </li>
                     </a>
